--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button id="restart">RESTART</button>
     </div>
     <footer id="epic-footer">
-        <p>Made with love by Jasmir Medina (fn-cafeina) :3</p>
+        <p>Made with love by Jasmir Medina <a href="https://github.com/fn-cafeina" target="_blank">(fn-cafeina)</a> :3</p>
     </footer>
 </body>
 </html>
